# actix-web-backend-demo

./: .env  .gitignore  Cargo.toml
files/: index.html  login.html  music_all.html
migrations/2022-07-16-074042_create_users/: up.sql
src/: configuration.rs  errors.rs  main.rs  models.rs  utils.rs
src/auth/: claims.rs  mod.rs  mod.rs.new
src/db/: mod.rs  users.rs
src/handlers/: api.rs  mod.rs  pages.rs  tests.rs
tests/: admin_function  login
