[package]
name = "static-webside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "*"
actix-rt = "*"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "^0.4.14", features = ["std"] }
env_logger = "*"
actix-session = { version = "*", features = ["redis-rs-session", "redis-rs-tls-session", "redis-actor-session", "cookie-session"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
secrecy = { version = "0.8", features = ["serde"] }
base64 = "*"
